# SAN-Zone-Designer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: initiators.yaml  targets.yaml
san_zone_designer/: __init__.py  __main__.py  cli.py  colorizer.py  differ.py  importer.py  license_check.py  license_public.pem  migrator.py  models.py  parser.py  selector.py  validator.py
san_zone_designer/exporters/: __init__.py  config_writer.py  csv_writer.py
san_zone_designer/generators/: __init__.py  base.py  brocade.py  cisco.py
san_zone_designer/web/: __init__.py  app.py  audit.py  auth.py  dependencies.py  logging_config.py  schemas.py
san_zone_designer/web/routers/: auth.py  config.py  diff.py  files.py  generate.py  logs.py  migrate.py
san_zone_designer/web/static/: app.js  index.html  style.css
